
Version 1.26  2010-02-24
 * remove compile warning of logError
 * ini file reader support section
 * bug fixed: tracker/tracker_mem.c sync storage server status
 * use storage server http server port anyway

Version 1.25  2010-02-04
 * storage_sync.c if source file not exist when sync a file, change from 
   logWarning to logDebug
 * filename buff size change from 64 to 128
 * bug fixed: c client and php client, log not inited cause core dump when 
   call log functions
 * can print stack trace when process core dumped in Linux server
 * bug fixed: tracker/tracker_mem.c load storage servers fail with many groups
   and storage servers
 * common/sockopt.c remove debug info
 * storage stat add fields: version
 * auto adjust when storage server ip address changed
 * bug fixed: when add a new storage server, other storage servers' status keep
   the same, not changed
 * add macros, compile passed in cygwin, thanks Seapeak
 * write to system data file using lock
 * common/ini_file_reader.c: use one context parameter, not two parameters
 * storage status sync modified (the code of tracker and storage both changed)
 * when recv kill signal, worker thread quit more quickly, daemon process 
   fdfs_trackerd and fdfs_storage quit very quickly when recv kill signal
 * remove compile warning info of logError
 * tracker server start more quickly with many groups and storage servers
 * bug fixed: correct off_t printf format

Version 1.24  2010-01-06
 * call php_fdfs_close with TSRMLS_CC as php_fdfs_close(i_obj TSRMLS_CC)
 * storage server to storage server report ip address as tracker client
 * bug fixed: sendfile exceeds 2GB file in Linux
 * bug fixed: delete storage server 
 * storage stat add fields: up_time and src_ip_addr
 * big static or struct memeber char array buffer change to malloc in order to
   decrease stack size
 * FDFS_WRITE_BUFF_SIZE  change from 512KB to 256KB
 * bug fixed: client/storage_client.c, meta data miss when upload file