@@ -1,9 +1,10 @@
 
 Version 1.26  2010-02-24
  * remove compile warning of logError
- * ini file reader support section
+ * ini reader support section
  * bug fixed: tracker/tracker_mem.c sync storage server status
  * use storage server http server port anyway
+ * bug fixed: ini reader can support relative config filename
 
 Version 1.25  2010-02-04
  * storage_sync.c if source file not exist when sync a file, change from 
